URI クラスを使ってから toURL() で変換